# picows

./: .flake8  .gitignore  .readthedocs.yaml  AGENTS.md  HABR.md  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  perf.data  perf.data.old  pyproject.toml  requirements-benchmark.txt  requirements-test.txt  requirements.txt  setup.py  win_perf.bat
.github/workflows/: codspeed.yml  example.yml  python-app.yml  release.yml  run-tests.yml
aiofastnet/: __init__.py  api.py  certdecode.c  certdecode.h  constants.py  fastnet.py  openssl.pxd  socket_transport.py  socket_transport.pyx  ssl.pxd  ssl.pyx  sslproto.pxd  sslproto.pyx  sslproto_stdlib.pxd  sslproto_stdlib.pyx  static_mem_bio.c  static_mem_bio.h  system.pxd  transport.pxd  transport.pyx  utils.pxd  utils.pyx
docs/: requirements.txt
docs/source/: conf.py  getting_started.rst  guides.rst  index.rst  introduction.rst  reference.rst
examples/: binance_example.py  broadcast_client.py  broadcast_server.py  echo.py  echo_client.py  echo_client_async_callbacks.py  echo_client_async_iteration.py  echo_client_async_queue.py  echo_client_benchmark.py  echo_client_cython.pyx  echo_client_cython_runner.py  echo_client_fragmented_msg.py  echo_client_pipelined.py  echo_client_threaded.py  echo_client_websockets.py  echo_server.py  echo_server_readme.py  echo_server_ssl.py  echo_server_threaded.py  graceful_shutdown.py  okx_roundtrip_time.py  perf_test.py  picows_client_cython.pyx  playground.py  readme_client.py  readme_server.py  reconnecting_client.py  slow_client_backpressure.py  subprotocol_negotiation.py  tiny-proxy.py
picows/: __init__.py  api.py  compat.h  mask_avx2.c  mask_avx512.c  mask_dispatch.c  mask_neon.c  mask_sse2.c  picows.pxd  picows.pyi  picows.pyx  picows_compat.h  picows_py_api.py  ssl.pxd  ssl.pyx  sslproto.pxd  sslproto.pyx  sslproto_stdlib.pxd  types.py  url.py
picows/websockets/: __init__.py  compat.py  exceptions.py  typing.py
picows/websockets/asyncio/: __init__.py  client.py  connection.py
tests/: conftest.py  fixtures.py  picows_test.crt  picows_test.key  test_autoping.py  test_basics.py  test_benchmarks.py  test_echo.py  test_proxy.py  test_public_echo_server.py  test_redirect_location.py  test_redirects.py  test_redirects_and_proxies.py  test_threading.py  test_websockets_compat.py  test_websockets_compression_compat.py  test_ws_logic.py  utils.py
