[project]
name = "picows"
description = "Ultra-fast websocket client and server for asyncio"
authors = [{name = "Taras Kozlov", email = "tarasko.projects@gmail.com"}]
requires-python = '>=3.8'
readme = "README.rst"
license = {text = "MIT License"}
dynamic = ["version"]
keywords = ["websocket", "networking"]
dependencies = ["multidict"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: System :: Networking"
]

[build-system]
requires = ["setuptools >= 61.0", "wheel", "Cython >= 3.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/tarasko/picows"
Repository = "https://github.com/tarasko/picows"
Issues = "https://github.com/tarasko/picows/issues"
Documentation = "https://picows.readthedocs.io/en/latest"

[tool.setuptools]
packages = ["picows"]

[tool.setuptools.dynamic]
version = {attr = "picows.__version__"}

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
